--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,5 +1,5 @@
 // * Максимальная ширина макета
-$container-width: 1930;
+$container-width: 1570;
 
 :root {
 	// * Colors
@@ -7,4 +7,9 @@ $container-width: 1930;
 	--light-color: #fff;
 	--bg-color: #e27d5f;
 	--accent-color: #9fd4ff;
+	--gentian-blue: #07203f;
+	--light-grey: #d9d9d9;
+	--pearl-white: #eaded4;
+	--signal-black: #333;
+	--yellow-pink: #d9aa90;
 }
