--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -1,13 +1,14 @@
 .header {
+	border-bottom: 2px solid var(--light-grey);
 	width: 100%;
-	background-color: var(--bg-color);
+	background-color: var(--gentian-blue);
 
 	&__container {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		margin: 0 auto;
-		padding: 10px 15px;
+		padding: 45px 0;
 		min-height: 70px;
 		max-width: $container-width + px;
 	}
@@ -26,7 +27,7 @@
 }
 
 .logo__img {
-	width: 200px;
+	width: 286px;
 	height: auto;
 	fill: var(--light-color);
 }
@@ -37,7 +38,7 @@
 	}
 
 	&__item {
-		margin-right: 20px;
+		margin-right: 40px;
 
 		&:last-child {
 			margin: 0;
@@ -47,6 +48,10 @@
 	&__link {
 		@include adaptive-font(18, 16);
 		position: relative;
+		font-family: Inter, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		font-size: 40px;
 		color: var(--light-color);
 
 		&::after {
