--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -10,13 +10,13 @@
 			<nav class="menu__body">
 				<ul class="menu__list list-reset">
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#" data-goto=".section-1">Раздел #1</a>
+						<a class="menu__link link-reset" href="#/" data-goto=".section-1">Мои работы</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#" data-goto=".section-2">Раздел #2</a>
+						<a class="menu__link link-reset" href="#/" data-goto=".section-2">Обо мне</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#" data-goto=".section-3">Раздел #3</a>
+						<a class="menu__link link-reset" href="#/" data-goto=".section-3">Контакты</a>
 					</li>
 				</ul>
 			</nav>
