Сверстал секцию projects

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -17,4 +17,5 @@
 @import '../components/header/header';
 @import 'chunk/hero';
 @import 'chunk/ability';
+@import 'chunk/projects';
 @import 'chunk/footer';
