--- a/assets/scss/chunk/_contacts.scss
+++ b/assets/scss/chunk/_contacts.scss
@@ -1,4 +1,4 @@
-.ability {
+.contacts {
 	padding: 100px 0 250px;
 	background-color: var(--pearl-white);
 
@@ -18,12 +18,14 @@
 		justify-content: space-between;
 	}
 
-	&__btn {
+	&__link {
+		padding: 200px 0;
 		width: 500px;
 		height: 500px;
 		font-family: Montserrat, sans-serif;
 		font-weight: 800;
 		font-size: 72px;
+		text-align: center;
 		color: var(--light-color);
 		background-color: var(--gentian-blue);
 		transition: 0.4s;
