сверстал подвал, правки и подключил шрифты

--- a/assets/scss/chunk/_contacts.scss
+++ b/assets/scss/chunk/_contacts.scss
@@ -9,6 +9,7 @@
 		font-weight: 800;
 		font-size: 72px;
 		text-align: center;
+		text-transform: uppercase;
 		color: var(--signal-black);
 	}
 
@@ -26,6 +27,7 @@
 		font-weight: 800;
 		font-size: 72px;
 		text-align: center;
+		text-transform: uppercase;
 		color: var(--light-color);
 		background-color: var(--gentian-blue);
 		transition: 0.4s;
