--- a/assets/components/header/_header.scss
+++ b/assets/components/header/_header.scss
@@ -16,6 +16,11 @@
 	&__logo {
 		z-index: 5;
 		display: block;
+		font-family: Montserrat, sans-serif;
+		font-weight: 700;
+		font-size: 40px;
+		text-transform: uppercase;
+		color: var(--light-color);
 	}
 
 	&.fixed {
@@ -52,6 +57,7 @@
 		font-weight: 400;
 		font-style: normal;
 		font-size: 40px;
+		text-transform: uppercase;
 		color: var(--light-color);
 
 		&::after {
