--- a/assets/components/header/header.html
+++ b/assets/components/header/header.html
@@ -1,25 +1,21 @@
 <header class="header">
 	<div class="header__container">
-		<a class="header__logo logo" href="#">
-			<img class="logo__img" src="@img/header/logo.png" alt="Logo">
-		</a>
+		<a class="header__logo logo link-reset" href="#"> @nickname</a>
 		<div class="header__menu menu">
 			<button class="menu__burger burger btn-reset">
 				<span class="burger__line"></span>
 			</button>
-			<nav class="menu__body">
 				<ul class="menu__list list-reset">
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#/" data-goto=".section-1">Мои работы</a>
+						<a class="menu__link link-reset" href="#projects" data-goto=".section-1">Мои работы</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#/" data-goto=".section-2">Обо мне</a>
+						<a class="menu__link link-reset" href="#hero" data-goto=".section-2">Обо мне</a>
 					</li>
 					<li class="menu__item">
-						<a class="menu__link link-reset" href="#/" data-goto=".section-3">Контакты</a>
+						<a class="menu__link link-reset" href="#contacts" data-goto=".section-3">Контакты</a>
 					</li>
 				</ul>
-			</nav>
 		</div>
 	</div>
 </header>
