--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,1 +1,5 @@
-@include font-face('Circe', 'Circe', 400, normal);
+@include font-face('Montserrat', 'Montserrat-Bold', 700, normal);
+@include font-face('Montserrat', 'Montserrat-ExtraBold', 800, normal);
+@include font-face('Inter', 'Inter-Regular', 400, normal);
+@include font-face('Inter', 'Inter-Bold', 700, normal);
+@include font-face('Roboto', 'Roboto-Regular', 400, normal);
