--- a/assets/scss/chunk/_ability.scss
+++ b/assets/scss/chunk/_ability.scss
@@ -9,6 +9,7 @@
 		font-weight: 800;
 		font-size: 72px;
 		text-align: center;
+		text-transform: uppercase;
 		color: var(--signal-black);
 	}
 
@@ -24,6 +25,7 @@
 		font-family: Montserrat, sans-serif;
 		font-weight: 800;
 		font-size: 72px;
+		text-transform: uppercase;
 		color: var(--light-color);
 		background-color: var(--gentian-blue);
 		transition: 0.4s;
