--- a/assets/scss/chunk/_contacts.scss
+++ b/assets/scss/chunk/_contacts.scss
@@ -20,13 +20,15 @@
 	}
 
 	&__link {
-		padding: 200px 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		border: 1px solid;
 		width: 500px;
 		height: 500px;
 		font-family: Montserrat, sans-serif;
 		font-weight: 800;
 		font-size: 72px;
-		text-align: center;
 		text-transform: uppercase;
 		color: var(--light-color);
 		background-color: var(--gentian-blue);
